--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: edcpR
-Title: What the Package Does (One Line, Title Case)
+Title: Ecological data collection and processing practicals package
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Ward",
+           family = "Fonteyn",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+           email = "ward.fonteyn@kuleuven.be")
+Description: Ecological data collection and processing practicals package.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
