--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: edcpR
-Title: Ecological data collection and processing practicals package
+Title: Ecological Data Collection and Processing Package
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Ward",
            family = "Fonteyn",
            role = c("aut", "cre"),
            email = "ward.fonteyn@kuleuven.be")
-Description: Ecological data collection and processing practicals package.
+Description: This is the course package for the exercise portion of the "Ecological Data Collection and Processing" course.
 License: MIT + file LICENSE
 Encoding: UTF-8
-LazyData: false
+LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Suggests: 
